--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "@tailwindcss/postcss": "^4.1.18",
     "cmdk": "^1.1.1",
     "framer-motion": "^12.26.1",
-    "next": "16.1.1",
+    "lenis": "^1.3.17",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
@@ -25,11 +28,14 @@
     "three": "^0.182.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "^20.19.33",
+    "@types/react": "^19.2.13",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "typescript": "^5"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   }
 }
